[package]
name = "trygg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
policy-evaluator = {git = "https://github.com/kubewarden/policy-evaluator"}
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_24"] }
serde_json = "1.0.85"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "trygg"
path = "src/main.rs"
